--- a/styles/temples.css
+++ b/styles/temples.css
@@ -10,34 +10,38 @@ body {
 header {
     background-color: #4a69bd;
     color: #fff;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;
     align-items: center;
-    padding: 1.5em;
+    position: relative;
+    padding: 0.5em;
+}
+h1{
+    margin-left: 1em;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.menu-nav{
     display: flex;
-    gap: 1.5em;
+    flex-direction: column;
+    list-style: none;
+    background-color: #3b5998;
 }
 
-nav li {
-    margin: 0;
-}
-
-nav a {
+.menu-nav a {
+    display: none;
     color: #fff;
     text-decoration: none;
     padding: 0.75em 1.25em;
     transition: background-color 0.3s, color 0.3s;
 }
-
-nav a:hover {
+.menu-nav a:hover,
+.menu-nav a.active {
     background-color: #3b5998;
-    color: #ffeb3b;
+    color: #5e94d2;
+    font-weight: 700;
+}
+
+.open a {
+    display: block;
 }
 
 main {
@@ -83,45 +87,47 @@ figcaption {
 }
 
 footer{
+    background-color: #4a69bd;
     padding-top: 15px;
     padding-bottom: 15px;
     border-top: 1px solid #000;
     text-align: center;
+    color: #fff;
 }
 footer p {
     line-height: normal;
     margin: 0;
+    
 }
 
 .highli{
-    color: steelblue;
+    color: rgb(143, 245, 242);
     font-weight: 700;
     
 }
 
 #menu-button {
-    display: none;
+    position: absolute;
     font-size: 1.75em;
     background: none;
     border: none;
     color: #fff;
     cursor: pointer;
-    position: absolute;
     top: 0.75rem;
     right: 0.75rem;
-    padding-top: 7px;
+    padding-top: 24px;
 }
 
 #menu-button::before {
     content: "☰";
 }
 
-#menu-button.active::before {
-    content: "❎";
+#menu-button.open::before {
+    content: "X";
     justify-self: left;
 }
 
-@media (min-width: 37.5em) {
+/* @media (max-width: 37.5em) {
     h1 {
         font-size: 2.5rem;
         margin-left: 0;
@@ -137,21 +143,12 @@ footer p {
         margin-right: 1.5rem; 
     }
 
-    #menu-nav ul {
-        display: none;
-        flex-direction: column;
-        gap: 0.75em;
-    }
-
-    #menu-nav.active ul {
-        display: flex;
-    }
 
     nav a:hover {
-        color: #00ff8e;
+        color: #5577bb;
     }
 
     #menu-button {
         display: block;
     }
-}
+} */
