--- a/styles/responsive-images.css
+++ b/styles/responsive-images.css
@@ -1,15 +1,22 @@
 /* Global styles */
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Play&display=swap');
 :root {
     --primary-color: #ff5733;
     --secondary-color: #333;
-}
+    --heading-font: "Play", sans-serif;
+    --paragraph-font: "Oswald", sans-serif;}
+
 
 body {
-    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-family: var(--heading-font);
     margin: 0;
     padding: 0;
 }
-
+p{
+    font-size: 18px;
+    font-family: var(--paragraph-font);
+}
 header, footer {
     background-color: var(--primary-color);
     color: white;
@@ -54,7 +61,16 @@ main {
   padding: 1em;
   border-radius: 5px;
 }
+.info h2::after {
+    content: ""; 
+    margin-left: 0.5em; 
+    font-size: 1.2em; 
+    color: #333; 
+  }
 
+.weather-icon {
+    display: none; 
+  }
 /* Media query para pantallas grandes */
 @media (min-width: 1000px) {
   .info,
@@ -74,3 +90,11 @@ main {
     content: "⛅";
 }
 }
+@media (max-width: 500px) {
+    .weather-icon {
+      display: block; 
+      width: 50px; 
+      height: 50px;
+      fill: #333; 
+    }
+  }
